[lworld] C2: fatal error: no reachable node should have no use

XMLWordPrintable

      test9() in scenario 0 of test

          compiler/valhalla/inlinetypes/TestLWorld.java

      crashes intermittently.

      It can be triggered more reliably when passing the following javaopts:

          -DScenarios=0 -DTest=test9 -DWarmup=2000 -XX:CompileCommand=repeatcompilation,*::test9,1000 -XX:-TieredCompilation -XX:+StressLoopPeeling


      Output:

      3725 Phi === 2424 3514 2064 [[ ]] #memory Memory: @BotPTR *+bot, idx=Bot; !orig=[2461] !jvms: MyAbstract::<init> @ bci:1 (line 29) MyValue1::<init> @ bci:63 (line 65) MyValue1::setX @ bci:41 (line 140) TestLWorld::test9 @ bci:25 (line 377)

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/0103b69c-746c-4fb5-bf13-94918f380124-S337/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/36e32a40-9588-4988-a3d1-82593c39a310/runs/876e7673-c0b9-47dd-94c3-3a4ca55e7276/workspace/open/src/hotspot/share/opto/compile.cpp:3114), pid=396781, tid=396800
      # fatal error: no reachable node should have no use
      #
      # JRE version: Java(TM) SE Runtime Environment (26.0+1) (fastdebug build 26-valhalla+1-45)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-valhalla+1-45, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xb8c1d2] Compile::check_no_dead_use() const+0x622
      ...........
      Command Line: -Djava.library.path=. -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -DScenarios=0 -DTest=test9 -DWarmup=2000 -XX:CompileCommand=repeatcompilation,*::test9,1000 -XX:-TieredCompilation -XX:+StressLoopPeeling -Dir.framework.server.port=46525 --enable-preview --add-exports=java.base/jdk.internal.value=ALL-UNNAMED --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -XX:+IgnoreUnrecognizedVMOptions -XX:-UseACmpProfile -XX:+AlwaysIncrementalInline -XX:FlatArrayElementMaxOops=5 -XX:+UseArrayFlattening -XX:-UseArrayLoadStoreProfile -XX:+UseFieldFlattening -XX:+InlineTypePassFieldsAsArgs -XX:+InlineTypeReturnedAsFields -XX:-BackgroundCompilation -XX:CompileCommand=quiet compiler.lib.ir_framework.test.TestVM compiler.valhalla.inlinetypes.TestLWorld compiler.valhalla.inlinetypes.MyValue2 compiler.valhalla.inlinetypes.MyValue3 compiler.valhalla.inlinetypes.MyValue1 compiler.valhalla.inlinetypes.MyValue3Inline compiler.valhalla.inlinetypes.MyValue2Inline
      ...........
      C2:7989 584 b compiler.valhalla.inlinetypes.TestLWorld::test9 (38 bytes)

      Stack: [0x00007fc298d17000,0x00007fc298e17000], sp=0x00007fc298e11f40, free space=1003k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xb8c1d2] Compile::check_no_dead_use() const+0x622 (compile.cpp:3114)
      V [libjvm.so+0xba6dd0] Compile::Optimize()+0x1c80
      V [libjvm.so+0xba910f] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1fdf
      V [libjvm.so+0x9b18b4] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x484
      V [libjvm.so+0xbb84c4] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc14
      V [libjvm.so+0xbb95a8] CompileBroker::compiler_thread_loop()+0x568
      V [libjvm.so+0x114f48b] JavaThread::thread_main_inner()+0x13b
      V [libjvm.so+0x1c17bd6] Thread::call_run()+0xb6
      V [libjvm.so+0x184a598] thread_native_entry(Thread*)+0x128

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: