8368782: [lworld] C2: fatal error: no reachable node should have no use

Reviewed-by: thartmann